[metadata]
name = Edmund
version = 0.0.1
author = MrHedmad
author_email = luca.visentin@unito.it
description = My collection of python scripts.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MrHedmad/Edmund
project_urls =
    Bug Tracker = https://github.com/MrHedmad/Edmund/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
packages = 
    edmund
    edmund.scripts
    
include_package_data = True
install_requires =
    numpy
    pandas
    python-dateutil
    pytz
    scipy
    six
    tqdm
    requests
    pyyaml
    click
    statsmodels

python_requires = >=3.6

[options.package_data]
* = *.yml,

[options.entry_points]
console_scripts =
    edmund = edmund.entrypoint:cli
