[metadata]
name = Edmund
version = 0.0.1
author = MrHedmad
author_email = luca.visentin@unito.it
description = A collection of scripts, modules and pipelines used in publications, one-off analyses, and more.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MrHedmad/Edmund
project_urls =
    Bug Tracker = https://github.com/MrHedmad/Edmund/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
packages = find:

include_package_data = True
install_requires =
    numpy
    pandas
    python-dateutil
    pytz
    scipy
    six
    tqdm
    requests
    pyyaml
    click
    statsmodels

python_requires = >=3.10

[options.package_data]
* = *.yml,

[options.entry_points]
console_scripts =
    edmund = edmund.entrypoint:cli
